welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:18: error: ')' expected but '}' found.
			}
                        ^