welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
		
	if (10>a && b>20 || a>20 && 10>b || a>20 && b>20 || 10>a && b<10)
	{
		return 0
	}
	else if (10<=a && a<=20 && 10<=b && b<=20)
	{
		return Math.max(a,b)
	}
	else {
		if (10<=a && a<=20 && (10>=b || b>=20))
	{
		return a
	}
		else {
			if (10<=b && b<=20 && (10>=a || a>=20)
			}
			{
			return b
			}
		}
						}		

